fix se eliminan comentarios

--- a/src/app/moduls/edit/edit.component.html
+++ b/src/app/moduls/edit/edit.component.html
@@ -21,11 +21,11 @@
           <div class="form-group">
             <label for="formGroupExampleInput2">Otros datos</label>
             <input type="text"   class="form-control"  formControlName="phone" placeholder="Ingrese su número">
-           <!--  <hr>
-            <input type="text" citycode" class="form-control" name="codigoCiudad" placeholder="Código ciudad">
             <hr>
-            <input type="text" contrycode" class="form-control" name="codigopais" placeholder="Código país">
-            <hr> -->
+            <input type="text" class="form-control" formControlName="citycode" name="citycode" placeholder="Código ciudad">
+            <hr>
+            <input type="text" class="form-control" formControlName="contrycode" name="contrycode" placeholder="Código país">
+            <hr>
           </div>
 
         <div style='text-align:center'>
